Use progress dialog for Jython download
The new progress dialog class is now used when the Jython jar is
downloaded. Currently broken: the download gets aborted for reasons
I haven't yet determined.